# Pemodelan-Konsistensi-Tanah

./: README  README.md  eda.py  model.py  pyproject.toml
data/: data.csv  data.xlsx
eda/: Frequency_Table_Konsistensi_Wilayah.csv
summary/: metadata-model.csv
