[tool.poetry]
name = "pemodelan konsistensi tanah"
version = "0.1.0"
description = "Semua Dependensi Yang Dibutuhkan"
authors = ["Naufal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
